--- a/Assignment 1 - Jan 10.ipynb
+++ b/Assignment 1 - Jan 10.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MDP():\n",
+    "class MDP:\n",
     "    \"\"\"A class representing a Markov Decision Process\"\"\"\n",
     "    def __init__(self, transitions: Mapping[S, Mapping[A, Mapping[S, float]]], rewards: Mapping[S, Mapping[A, float]], gamma):\n",
     "        self.all_states_list = list(transitions.keys()) \n",
