--- a/Assignment 6 - Feb 7.ipynb
+++ b/Assignment 6 - Feb 7.ipynb
@@ -150,6 +150,7 @@
     "        predict value function\n",
     "        '''        \n",
     "        vf_dict = {s: 0.0 for s in self.mdp.actions.keys()}\n",
+    "        count_dict = {s: 0 for s in self.mdp.actions.keys()}\n",
     "        episodes = 0\n",
     "\n",
     "        while episodes < self.num_episodes:\n",
@@ -162,6 +163,14 @@
     "                returns = get_returns_from_rewards_terminating(rewards, self.mdp.gamma)\n",
     "            else:\n",
     "                returns = get_returns_from_rewards_non_terminating(rewards, self.mdp.gamma, self.nt_return_eval_steps)\n",
+    "            for i, ret in enumerate(returns):\n",
+    "                s = path[i][0]\n",
+    "                first = path[i][3]\n",
+    "                # if first visit\n",
+    "                if first:\n",
+    "                    count_dict[s] += 1\n",
+    "                    c = count_dict[s]\n",
+    "                    vf_dict[s] = (vf_dict[s] * (c - 1) + ret) / c\n",
     "            episodes += 1\n",
     "\n",
     "        return vf_dict\n",
